--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "lint": "eslint src/**/*.ts",
+    "lint:fix": "eslint --fix src/**/*.ts",
     "start:dev": "nodemon -e ts  --exec \"tsc && node ./dist/main.js\"",
     "start:prod": "tsc && node ./dist/main.js"
   },
@@ -12,6 +14,11 @@
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^17.0.21",
+    "@typescript-eslint/eslint-plugin": "^5.15.0",
+    "@typescript-eslint/parser": "^5.15.0",
+    "eslint": "^8.11.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.25.4",
     "typescript": "^4.6.2"
   },
   "dependencies": {
